--- a/views/index.ejs
+++ b/views/index.ejs
@@ -53,8 +53,8 @@
     <div id="wrapper">
         <div id="login" class="animate form">
             <p>Login or Register</p>
-           <p><a href="/signup" class="btn btn-default"><span class="fa fa-user">Login</span>
-		   <p><a href="/bord" class="btn btn-default">Bord Admin</a></p>
+           <p><a href="/signup" class="btn btn-default"><span class="fa fa-user"></span>
+           OK</a></p>
         </div>
     </div>
 </div>
