--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -13,7 +13,7 @@
             </div>
             <div class="profile_info">
                 <span>Welcome,</span>
-                <h2>John Doe</h2>
+                <h2> <%= user.firstname%></h2>
             </div>
         </div>
         <!-- /menu prile quick info -->
@@ -28,7 +28,7 @@
                 <ul class="nav side-menu">
                     <li><a><i class="fa fa-home"></i> Home <span class="fa fa-chevron-down"></span></a>
                         <ul class="nav child_menu" style="display: none">
-                            <li><a href="index.html">Dashboard</a>
+                            <li><a href="#/">Dashboard</a>
                             </li>
                             <li><a href="index2.html">Dashboard2</a>
                             </li>
@@ -36,25 +36,22 @@
                             </li>
                         </ul>
                     </li>
-                    <li><a><i class="fa fa-edit"></i> Forms <span class="fa fa-chevron-down"></span></a>
+                    <% if(user.typeUser == 'admin'){%>
+                    <li><a><i class="fa fa-edit"></i> Contenus <span class="fa fa-chevron-down"></span></a>
                         <ul class="nav child_menu" style="display: none">
-                            <li><a href="form.html">General Form</a>
+                            <li><a href="#/contents">Domaine</a>
                             </li>
-                            <li><a href="form_advanced.html">Advanced Components</a>
+                            <li><a href="#/items"><S>Specialites</S></a>
                             </li>
-                            <li><a href="form_validation.html">Form Validation</a>
+                            <li><a href="form_validation.html">Evaluations</a>
                             </li>
-                            <li><a href="form_wizards.html">Form Wizard</a>
-                            </li>
-                            <li><a href="form_upload.html">Form Upload</a>
-                            </li>
-                            <li><a href="form_buttons.html">Form Buttons</a>
+                            <li><a href="form_wizards.html">Devis</a>
                             </li>
                         </ul>
                     </li>
-                    <li><a><i class="fa fa-desktop"></i> UI Elements <span class="fa fa-chevron-down"></span></a>
+                    <li><a><i class="fa fa-desktop"></i> Utilisateurs <span class="fa fa-chevron-down"></span></a>
                         <ul class="nav child_menu" style="display: none">
-                            <li><a href="general_elements.html">General Elements</a>
+                            <li><a href="#/users">Gerer</a>
                             </li>
                             <li><a href="media_gallery.html">Media Gallery</a>
                             </li>
@@ -74,7 +71,8 @@
                             </li>
                         </ul>
                     </li>
-                    <li><a><i class="fa fa-table"></i> Tables <span class="fa fa-chevron-down"></span></a>
+                    <%}%>
+                    <li><a><i class="fa fa-table"></i> Page Pro <span class="fa fa-chevron-down"></span></a>
                         <ul class="nav child_menu" style="display: none">
                             <li><a href="tables.html">Tables</a>
                             </li>
@@ -82,7 +80,7 @@
                             </li>
                         </ul>
                     </li>
-                    <li><a><i class="fa fa-bar-chart-o"></i> Data Presentation <span class="fa fa-chevron-down"></span></a>
+                    <li><a><i class="fa fa-bar-chart-o"></i> Projet <span class="fa fa-chevron-down"></span></a>
                         <ul class="nav child_menu" style="display: none">
                             <li><a href="chartjs.html">Chart JS</a>
                             </li>
@@ -164,18 +162,18 @@
             <div class="nav toggle">
                 <a id="menu_toggle"><i class="fa fa-bars"></i></a>
             </div>
-
             <ul class="nav navbar-nav navbar-right">
                 <li class="">
                     <a href="javascript:;" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                        <img src="images/img.jpg" alt="">
+                        <img src="images/img.jpg" alt=""> <%= user.firstname%>
                         <span class=" fa fa-angle-down"></span>
                     </a>
                     <ul class="dropdown-menu dropdown-usermenu animated fadeInDown pull-right">
-                        <li><a href="javascript:;">  Profile</a>
+                        <li>
+                            <a href="/profil/<%= user._id%>">  Profile</a>
                         </li>
                         <li>
-                            <a href="javascript:;">
+                            <a href="/profil/<%= user._id%>">
                                 <span class="badge bg-red pull-right">50%</span>
                                 <span>Settings</span>
                             </a>
@@ -198,34 +196,6 @@
                             <a>
                       <span class="image">
                                         <img  src="ressources/images/img.jpg" alt="Profile Image" />
-                                    </span>
-                      <span>
-                                        <span>John Smith</span>
-                      <span class="time">3 mins ago</span>
-                      </span>
-                      <span class="message">
-                                        Film festivals used to be do-or-die moments for movie makers. They were where...
-                                    </span>
-                            </a>
-                        </li>
-                        <li>
-                            <a>
-                      <span class="image">
-                                        <img src="images/img.jpg" alt="Profile Image" />
-                                    </span>
-                      <span>
-                                        <span>John Smith</span>
-                      <span class="time">3 mins ago</span>
-                      </span>
-                      <span class="message">
-                                        Film festivals used to be do-or-die moments for movie makers. They were where...
-                                    </span>
-                            </a>
-                        </li>
-                        <li>
-                            <a>
-                      <span class="image">
-                                        <img src="images/img.jpg" alt="Profile Image" />
                                     </span>
                       <span>
                                         <span>John Smith</span>
