demande devis frontend

--- a/public/views/content/list.html
+++ b/public/views/content/list.html
@@ -147,9 +147,7 @@
                         <td class="a-center ">
                             <a href="" class="btn btn-primary btn-xs"><i class="fa fa-folder"></i> View </a>
                         </td>
-                        <td class=" ">
-                            {{d.name}}
-                        </td>
+                        <td class=" ">{{d.name}}</td>
                         <td class=" " >{{d.desc}}</td>
                         <td class=" ">{{d.tags}}</td>
                         <td class=" ">{{d.specialites}}</td>
